feat: register custom converters
